Add tests and coverage