@@ -5,7 +5,6 @@ import tech.jhipster.lite.cli.error.domain.Assert;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record Modules( Collection<Category> categories) {
 
@@ -14,13 +13,10 @@ public record Modules( Collection<Category> categories) {
     Assert.field("categories", categories).notNull().noNullElement();
   }
 
-  public List<String> listCategories(){
-    return this.categories().stream().map(n-> n.name()).toList();
-  }
   public  List<String>  listModules() {
     return this.categories()
       .stream()
-      .map(entry ->  entry.modules().stream().map(m -> m.slug().slug()).collect(Collectors.toList()))
+      .map(entry ->  entry.modules().stream().map(m -> m.slug().slug()).toList())
       .flatMap(List::stream)
       .toList();
   }
@@ -28,10 +24,8 @@ public record Modules( Collection<Category> categories) {
   public  List<Module>  listModule() {
     return this.categories()
       .stream()
-      .map(m -> m.modules().stream().map(ma -> ma).collect(Collectors.toList()))
-//      .map(entry ->  entry.modules().stream().map(m -> m.slug()).collect(Collectors.toList()))
+      .map(m -> m.modules().stream().map(ma -> ma).toList())
       .flatMap(List::stream)
-//      .sorted(String::compareToIgnoreCase)
       .toList();
   }
 }
